@@ -49,6 +49,7 @@ public class ExceptionTraceQueryParameter extends QueryParameter {
     private final OrderByAttributes orderBy;
     private final String isDesc;
     private final List<GroupByAttributes> groupByAttributes;
+    private final FilterByAttributes filterByAttributes;
 
     private final long timeWindowRangeCount;
 
@@ -67,7 +68,12 @@ public class ExceptionTraceQueryParameter extends QueryParameter {
         this.orderBy = builder.orderBy;
         this.isDesc = builder.isDesc;
         this.groupByAttributes = builder.groupByAttributes;
+        this.filterByAttributes = builder.filterByAttributes;
         this.timeWindowRangeCount = builder.timeWindowRangeCount;
+    }
+
+    public List<GroupByAttributes> getGroupByAttributes() {
+        return groupByAttributes;
     }
 
     public static class Builder extends QueryParameter.Builder<Builder> {
@@ -90,6 +96,7 @@ public class ExceptionTraceQueryParameter extends QueryParameter {
         private OrderByAttributes orderBy;
         private String isDesc;
         private final List<GroupByAttributes> groupByAttributes = new ArrayList<>();
+        private final FilterByAttributes filterByAttributes = new FilterByAttributes();
 
         private long timeWindowRangeCount = 0;
 
@@ -170,6 +177,11 @@ public class ExceptionTraceQueryParameter extends QueryParameter {
             return self();
         }
 
+        public Builder setGroupByAttributes(List<GroupByAttributes> groupByAttributes) {
+            this.groupByAttributes.addAll(groupByAttributes);
+            return self();
+        }
+
         public Builder addAllGroupByList(Collection<String> strings) {
             if (strings == null) {
                 return self();
@@ -178,8 +190,19 @@ public class ExceptionTraceQueryParameter extends QueryParameter {
                             GroupByAttributes::fromValue
                     )
                     .filter(Objects::nonNull)
-                    .distinct().sorted().collect(Collectors.toList());
+                    .distinct().sorted().toList();
             this.groupByAttributes.addAll(groupByAttributesList);
+            return self();
+        }
+
+        public Builder addAllFilters(Collection<String> strings) {
+            if (strings == null) {
+                return self();
+            }
+            for (String string : strings) {
+                String[] tag = string.split(":", 2);
+                filterByAttributes.put(tag[0], tag[1]);
+            }
             return self();
         }
 
@@ -212,7 +235,8 @@ public class ExceptionTraceQueryParameter extends QueryParameter {
     @Override
     public String toString() {
         return "ExceptionTraceQueryParameter{" +
-                "tenantId='" + tenantId + '\'' +
+                "tableName='" + tableName + '\'' +
+                ", tenantId='" + tenantId + '\'' +
                 ", applicationName='" + applicationName + '\'' +
                 ", agentId='" + agentId + '\'' +
                 ", transactionId='" + transactionId + '\'' +
@@ -222,6 +246,7 @@ public class ExceptionTraceQueryParameter extends QueryParameter {
                 ", orderBy=" + orderBy +
                 ", isDesc='" + isDesc + '\'' +
                 ", groupByAttributes=" + groupByAttributes +
+                ", filterByAttributes=" + filterByAttributes +
                 ", timeWindowRangeCount=" + timeWindowRangeCount +
                 '}';
     }
